flavors/farcaster-backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cooks-api
spec:
  selector:
    app: cooks-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
