flavors/farcaster-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooks-ingress
spec:
  rules:
    - host: api.cooks.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cooks-api
                port:
                  number: 80
